# aribook

./: Cargo.toml  README.md  copy.sh  generate.sh  migrate.sh  plans.md  what-i-learned.md
chap2_1_lake_counting/: Cargo.toml
chap2_1_shortest_path_in_maze/: Cargo.toml
chap2_1_shortest_path_in_maze/src/: main.rs
chap2_1_subset_sum_problem/: Cargo.toml
chap2_2_best_cow_line/: Cargo.toml
chap2_2_best_cow_line/src/: main.rs
chap2_2_fence_repair/: Cargo.toml
chap2_2_interval_scheduling_problem/: Cargo.toml
chap2_2_problem_of_coins/: Cargo.toml
chap2_2_problem_of_coins/src/: main.rs
chap2_2_sarumans_army/: Cargo.toml
chap2_2_sarumans_army/src/: main.rs
chap2_3_01_knapsack_another_dp/: Cargo.toml
chap2_3_01_knapsack_by_value/: Cargo.toml
chap2_3_01_knapsack_by_value_inline/: Cargo.toml
chap2_3_01_knapsack_dp/: Cargo.toml
chap2_3_01_knapsack_dp/src/: main.rs
chap2_3_01_knapsack_inline/: Cargo.toml
chap2_3_01_knapsack_inline/src/: main.rs
chap2_3_01_knapsack_recursive/: Cargo.toml
chap2_3_01knapsack_another_dp/: Cargo.toml
chap2_3_01knapsack_another_dp/src/: main.rs
chap2_3_01knapsack_dp/: Cargo.toml
chap2_3_01knapsack_dp/src/: main.rs
chap2_3_01knapsack_recursive/: Cargo.toml
chap2_3_01knapsack_recursive/src/: main.rs
chap2_3_bounded_subset_sum_problem/: Cargo.toml
chap2_3_bounded_subset_sum_problem_inline/src/: main.rs
chap2_3_longest_common_sequence/: Cargo.toml
chap2_3_longest_increasing_sequence_brute/: Cargo.toml
chap2_3_longest_increasing_sequence_fast/: Cargo.toml
chap2_3_longest_increasing_sequence_fast/src/: main.rs
chap2_3_number_of_bounded_multichoice/: Cargo.toml
chap2_3_number_of_partitions/: Cargo.toml
chap2_3_number_of_partitions/src/: main.rs
chap2_3_unbounded_knapsack/: Cargo.toml
chap2_3_unbounded_knapsack_inline/: Cargo.toml
chap2_3_unbounded_knapsack_inline/src/: main.rs
crates/chap2_1/lake_counting/: Cargo.toml
crates/chap2_1/shortest_path_in_maze/: Cargo.toml
crates/chap2_1/subset_sum_problem/: Cargo.toml
crates/chap2_2/best_cow_line/: Cargo.toml
crates/chap2_2/fence_repair/: Cargo.toml
crates/chap2_2/interval_scheduling_problem/: Cargo.toml
crates/chap2_2/problem_of_coins/: Cargo.toml
crates/chap2_2/sarumans_army/: Cargo.toml
crates/chap2_3/01_knapsack_another_dp/: Cargo.toml
crates/chap2_3/01_knapsack_by_value/: Cargo.toml
crates/chap2_3/01_knapsack_by_value_inline/: Cargo.toml
crates/chap2_3/01_knapsack_dp/: Cargo.toml
crates/chap2_3/01_knapsack_inline/: Cargo.toml
crates/chap2_3/01_knapsack_recursive/: Cargo.toml
crates/chap2_3/bounded_subset_sum_problem/: Cargo.toml
crates/chap2_3/bounded_subset_sum_problem_inline/: Cargo.toml
crates/chap2_3/longest_common_sequence/: Cargo.toml
crates/chap2_3/longest_increasing_sequence_brute/: Cargo.toml
crates/chap2_3/longest_increasing_sequence_fast/: Cargo.toml
crates/chap2_3/number_of_bounded_multichoice/: Cargo.toml
crates/chap2_3/number_of_partitions/: Cargo.toml
crates/chap2_3/unbounded_knapsack/: Cargo.toml
crates/chap2_3/unbounded_knapsack_inline/: Cargo.toml
crates/chap2_4/expedition/: Cargo.toml
crates/chap2_4/fence_repair_fast/: Cargo.toml
crates/chap2_4/food_chain/: Cargo.toml
crates/chap2_4/heap/: Cargo.toml
crates/chap2_5/bellman_ford/: Cargo.toml
crates/chap2_5/bipartiteness/: Cargo.toml
crates/chap2_5/conscription/: Cargo.toml
crates/chap2_5/dijkstra_adjacent_list/: Cargo.toml
crates/chap2_5/dijkstra_adjacent_matrix/: Cargo.toml
crates/chap2_5/dijkstra_restoration/: Cargo.toml
crates/chap2_5/floyd_warshall/: Cargo.toml
crates/chap2_5/kruskal/: Cargo.toml
crates/chap2_5/layout/: Cargo.toml
crates/chap2_5/load_blocks/: Cargo.toml
crates/chap2_5/prim_adjacent_list/: Cargo.toml
crates/chap2_5/prim_adjacent_list_restoration/: Cargo.toml
crates/chap2_5/prim_adjacent_matrix/: Cargo.toml
crates/chap2_6/carmichael_numbers/: Cargo.toml
crates/chap2_6/number_of_lattice_points/: Cargo.toml
crates/chap2_6/number_of_prime_numbers_within_the_interval/: Cargo.toml
crates/chap2_6/number_of_prime_numbers_within_the_interval/src/: main.rs
crates/chap2_6/prime_test/: Cargo.toml
crates/chap2_6/sieve_of_eatosthenes/: Cargo.toml
crates/chap2_6/sugoroku/: Cargo.toml
crates/chap2_7/bridbe_the_prisoners/: Cargo.toml
crates/chap2_7/crazy_rows/: Cargo.toml
crates/chap2_7/crazy_rows_fast/: Cargo.toml
crates/chap2_7/millionare/: Cargo.toml
crates/chap2_7/minimum_scaalar_product/: Cargo.toml
crates/chap3_2/enumerate_adjacent_free_subsets/: Cargo.toml
crates/chap3_2/enumerate_adjacent_free_subsets/src/: lib.rs
crates/chap3_3/k_th_number_by_segtree/: Cargo.toml
crates/chap3_3/k_th_number_by_segtree/src/: main.rs
crates/chap3_3/number_of_swaps_in_bubble_sort/: Cargo.toml
crates/chap3_3/number_of_swaps_in_bubble_sort/src/: main.rs
crates/chap3_5/minimum_cost_flow_any_amount/: Cargo.toml
crates/chap3_5/minimum_cost_flow_any_amount/src/: main.rs
crates/chap4_1/number_of_non_periodic_strings/: Cargo.toml
crates/chap4_1/number_of_non_periodic_strings/src/: main.rs
crates/chap4_3/housewife_wind/: Cargo.toml
crates/chap4_3/housewife_wind/src/: main.rs
crates/chap4_3/lca_rmq/: Cargo.toml
crates/chap4_3/lca_rmq/src/: lib.rs
crates/chap4_3/two_sat/: Cargo.toml
crates/chap4_3/two_sat/src/: main.rs
crates/chap4_6/nearest_point_pair/: Cargo.toml
crates/chap4_6/nearest_point_pair/src/: main.rs
crates/chap4_6/number_of_swaps_of_bubble_sort/: Cargo.toml
crates/chap4_6/number_of_swaps_of_bubble_sort/src/: main.rs
crates/chap4_7/longest_pelindrome/: Cargo.toml
crates/chap4_7/longest_pelindrome/src/: main.rs
crates/chap4_8/endless_knight/: Cargo.toml
crates/chap4_8/endless_knight/src/: main.rs
crates/chap4_8/the_year_of_code_jam/: Cargo.toml
crates/chap4_8/the_year_of_code_jam/src/: main.rs
crates/chap4_8/year_of_more_code_jam/: Cargo.toml
crates/chap4_8/year_of_more_code_jam/src/: main.rs
crates/proconcli/: Cargo.toml
sandbox_1_1_1_kujibiki/: Cargo.toml
sandbox_1_1_1_kujibiki/src/: main.rs
src/: Cargo.toml  template.rs
(+242 files in other folders)
