[package]
name = "chap2_6_number_of_prime_numbers_within_the_interval"
version = "0.1.0"
authors = ["ngtkana <ngtkana@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = "0.4.1"
proconcli = { path = "../../proconcli" }
