[package]
name = "chap3_3_number_of_swaps_in_bubble_sort"
version = "0.1.0"
authors = ["ngtkana <ngtkana@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = "0.4.1"
proconcli = { path = "../../proconcli" }
chap3_3_binary_indexed_tree = { path = "../binary_indexed_tree" }
