[package]
name = "chap4_1_number_of_non_periodic_strings"
version = "0.1.0"
authors = ["ngtkana <ngtkana@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = "0.4.1"
proconcli = { path = "../../proconcli" }
chap4_1_mobius_function_of_divisors = { path = "../mobius_function_of_divisors" }
