[package]
name = "chap4_3_housewife_wind"
version = "0.1.0"
authors = ["ngtkana <ngtkana@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = "0.4.1"
proconcli = { path = "../../proconcli" }
chap4_3_lca_rmq = { path = "../lca_rmq" }
chap4_3_binary_indexed_tree = { path = "../../chap4_3/binary_indexed_tree" }
