[package]
name = "chap4_3_two_sat"
version = "0.1.0"
authors = ["ngtkana <ngtkana@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = "0.4.1"
proconcli = { path = "../../proconcli" }
chap4_3_scc = { path = "../scc" }
