[package]
name = "chap4_6_number_of_swaps_of_bubble_sort"
version = "0.1.0"
authors = ["ngtkana <ngtkana@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = "0.4.1"
proconcli = { path = "../../proconcli" }
