[package]
name = "chap4_7_longest_pelindrome"
version = "0.1.0"
authors = ["ngtkana <ngtkana@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = "0.4.1"
proconcli = { path = "../../proconcli" }
chap4_7_suffix_array = { path = "../suffix_array" }
chap4_7_lcp = { path = "../lcp" }
chap4_3_sparse_table_argmin = { path = "../../chap4_3/sparse_table_argmin" }

