[package]
name = "chap4_8_endless_knight"
version = "0.1.0"
authors = ["ngtkana <ngtkana@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = "0.4.1"
proconcli = { path = "../../proconcli" }
itertools = "0.9.0"
chap4_1_factorial = { path = "../../chap4_1/factorial" }
